--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -77,11 +77,13 @@ body {
 
 .nav-home {
   @apply tracking-tight;
+  @apply dg--link-hover;
 }
 
-.nav-home,
 .theme-toggle {
   @apply dg--link-hover;
+  @apply transition;
+  @apply dg--transition-effect;
 }
 
 .nav-bar {
