--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -159,8 +159,21 @@ body {
   }
 }
 
-.bio {
+.main {
+  @apply p-8;
+  @apply md:p-11;
+  @apply lg:p-16;
+  @apply pb-16;
+  @apply flex-grow;
+  @apply justify-center;
+}
+
+.bio,
+.links {
   max-width: 565px;
+}
+
+.bio {
   img {
     border: 1px solid rgba(var(--foreground-rgb), 0.5);
   }
@@ -212,9 +225,36 @@ body {
 }
 
 .links {
-  @apply pb-16;
-  a {
-    @apply pb-0.5;
+  @apply flex;
+  @apply items-stretch;
+  @apply px-8;
+  .link-list {
+    @apply flex;
+    @apply flex-wrap;
+    @apply justify-center;
+  }
+  .link {
+    @apply flex;
+    @apply leading-none;
+    @apply m-2;
+    @apply w-8;
+    a {
+      @apply opacity-30;
+      @apply self-center;
+      @apply transition-opacity;
+      @apply dg--transition-effect;
+      &:hover,
+      &:focus {
+        @apply opacity-100;
+      }
+    }
+    .goodreads-icon,
+    .stackoverflow-icon {
+      @apply max-h-8;
+    }
+    .goodreads-icon {
+      @apply pt-1;
+    }
   }
 }
 
