--- a/front/src/styles/not-found.css
+++ b/front/src/styles/not-found.css
@@ -1,3 +1,8 @@
+@import "./components.css";
+@import "./utilities.css";
+@tailwind components;
+@tailwind utilities;
+
 .not-found {
   @apply flex;
   @apply flex-col;
