style(front): adds a little padding to the moon icon

--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -111,6 +111,9 @@ body {
   @apply transition;
   @apply dg--transition-effect;
   @apply mt-0.5 ml-3;
+  #moon {
+    padding-bottom: 1px;
+  }
 }
 
 .nav-bar {
