feat(front): adds fixed height/width to prevent image loader from causing CLS

--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -233,6 +233,13 @@ body {
   }
 }
 
+.image-loader {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
 .footer {
   @apply pb-9;
   @apply flex-col;
