--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -1,6 +1,7 @@
 @import "./fonts.css";
 @import "./components.css";
 @import "./utilities.css";
+@import "./posts.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -154,6 +155,7 @@ body {
 .bio,
 .post,
 .posts,
+.privacy,
 .footer {
   a {
     @apply dg--link-hover;
@@ -163,14 +165,16 @@ body {
 .bio,
 .post,
 .posts,
+.privacy,
 .footer,
 .not-found {
   a {
-    @apply pb-0.5;
+    @apply pb-0.5 opacity-90;
     color: rgb(var(--foreground-rgb));
     border-bottom: 1px solid rgb(var(--foreground-rgb));
     &:hover,
     &:focus {
+      @apply opacity-100;
       border-color: rgb(var(--highlight-rgb));
     }
   }
