fix(front): refactors for and uses noscript styles
closes #100

--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -141,6 +141,7 @@ body {
 
 .bio {
   img {
+    @apply m-auto rounded-full;
     border: 1px solid rgba(var(--foreground-rgb), 0.5);
   }
   h1.headline {
