style(front): refactors styles for privacy policy; makes footer link brighter

--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -261,6 +261,11 @@ body {
   @apply mt-auto;
   @apply text-sm;
   small {
-    @apply opacity-20;
+    color: rgb(var(--subdued-rgb));
+    a {
+      @apply brightness-125;
+      color: rgb(var(--subdued-rgb));
+      border-color: rgb(var(--subdued-rgb));
+    }
   }
 }
