--- a/front/src/styles/utilities.css
+++ b/front/src/styles/utilities.css
@@ -5,22 +5,26 @@
   }
   .dg--light-theme {
     --foreground-rgb: 33, 33, 33;
+    --foreground-mark-rgb: 255, 255, 79;
     --foreground-rgb-faded: 179, 181, 181;
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
-    --background-pre-rgb: 203, 213, 225;
+    --background-saturated: 236, 236, 235;
+    --background-pre-rgb: 217, 217, 217;
     --btn--secondary-rgb: 190, 193, 194;
     --btn-secondary-highlight-rgb: 92, 92, 92;
     --highlight-rgb: 175, 83, 7;
-    --subdued-rgb: 216, 216, 216;
+    --subdued-rgb: 189, 189, 189;
     --transform-duration: 500ms;
     --transform-timing-function: ease-in-out;
   }
   .dg--dark-theme {
     --foreground-rgb: 223, 224, 224;
+    --foreground-mark-rgb: 207, 207, 0;
     --foreground-rgb-faded: 89, 90, 91;
     --background-start-rgb: 35, 36, 38;
     --background-end-rgb: 29, 30, 32;
+    --background-saturated: 19, 19, 20;
     --background-pre-rgb: 3, 3, 3;
     --highlight-rgb: 255, 255, 21;
     --subdued-rgb: 71, 72, 73;
