--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -3,6 +3,7 @@
 @import "./utilities.css";
 @import "./posts.css";
 @import "./syntax.css";
+@import "./components/Code.css";
 
 @tailwind base;
 @tailwind components;
