--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -188,7 +188,13 @@ body {
   img {
     @apply m-auto
       rounded-full
-      shadow-lg;
+      shadow-lg
+      transition-[height/width]
+      dg--transition-effect
+      h-[100px]
+      w-[100px]
+      sm:h-[120px]
+      sm:w-[120px];
     border: 1px solid rgba(var(--foreground-rgb), 0.5);
     position: relative;
     z-index: 3;
